--- a/package.json
+++ b/package.json
@@ -4,26 +4,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.2.1",
+    "@stripe/stripe-js": "^2.2.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.19.2",
     "lucide-react": "^0.516.0",
+    "promptpay-qr": "^1.2.0",
+    "qrcode": "^1.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "^5.0.1",
-    "@stripe/stripe-js": "^2.2.0",
-    "@paypal/react-paypal-js": "^8.2.1",
-    "express": "^4.19.2",
     "stripe": "^12.18.0",
-    "qrcode": "^1.5.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy":   "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "server": "node server/index.js",
     "eject": "react-scripts eject"
