--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^19.1.0",
     "react-scripts": "^5.0.1",
     "stripe": "^12.18.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@capacitor/core": "^5.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,6 +28,7 @@
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "server": "node server/index.js",
+    "cap": "npx cap sync",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -52,6 +54,7 @@
     "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "@capacitor/cli": "^5.4.0"
   }
 }
