--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@capacitor/core": "^5.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/index.js",
     "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
